[gd_scene load_steps=13 format=2]

[ext_resource path="res://resources/themes/large_general.tres" type="Theme" id=1]
[ext_resource path="res://scenes/game/LaneController.gd" type="Script" id=2]
[ext_resource path="res://scenes/game/Game.gd" type="Script" id=3]
[ext_resource path="res://scenes/game/GameUI.gd" type="Script" id=4]
[ext_resource path="res://resources/themes/medium_general.tres" type="Theme" id=5]
[ext_resource path="res://assets/circle.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/player_2.png" type="Texture" id=7]
[ext_resource path="res://resources/fonts/Poppins-Medium.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/textures/player_1.png" type="Texture" id=9]
[ext_resource path="res://scenes/game/Camera.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Camera" type="Camera2D" parent="."]
current = true
script = ExtResource( 10 )

[node name="ControllerLane" type="Node2D" parent="."]
z_index = -4096
script = ExtResource( 2 )
lane_color = Color( 0, 0, 0, 0.25098 )
lane_active_color = Color( 1, 1, 1, 0.25098 )
arc_color1 = Color( 0, 0.75, 1.5, 1 )
arc_color2 = Color( 0, 1.5, 0, 1 )
arc_color3 = Color( 1.5, 0.8, 0, 1 )
arc_color4 = Color( 1.5, 0, 0, 1 )

[node name="ControllerEntity" type="Node2D" parent="."]

[node name="ContainerUser" type="Node2D" parent="."]

[node name="GameUI" type="Control" parent="."]
margin_right = 2560.0
margin_bottom = 1440.0
script = ExtResource( 4 )

[node name="PhaseLabel" type="Label" parent="GameUI"]
self_modulate = Color( 1, 1, 1, 0.25098 )
margin_right = 180.0
margin_bottom = 180.0
theme = ExtResource( 1 )

[node name="TurnLabel" type="Label" parent="GameUI"]
self_modulate = Color( 1, 1, 1, 0.25098 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -90.0
margin_right = 640.0
margin_bottom = 90.0
theme = ExtResource( 1 )
align = 1

[node name="TextureRect" type="TextureRect" parent="GameUI"]
self_modulate = Color( 1, 1, 1, 0.25098 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -125.0
margin_bottom = 125.0
texture = ExtResource( 6 )

[node name="ActionButton" type="Button" parent="GameUI/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
text = "Pass"
flat = true
clip_text = true

[node name="PlayerRemote" type="HBoxContainer" parent="GameUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -508.0
margin_bottom = 112.0
theme = SubResource( 2 )

[node name="Label" type="Label" parent="GameUI/PlayerRemote"]
margin_right = 250.0
margin_bottom = 112.0
rect_min_size = Vector2( 250, 0 )
align = 2

[node name="CenterContainer" type="CenterContainer" parent="GameUI/PlayerRemote"]
margin_left = 254.0
margin_right = 354.0
margin_bottom = 112.0

[node name="TextureRect" type="TextureRect" parent="GameUI/PlayerRemote/CenterContainer"]
margin_top = 6.0
margin_right = 100.0
margin_bottom = 106.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 7 )
expand = true

[node name="Resources" type="Label" parent="GameUI/PlayerRemote"]
margin_left = 358.0
margin_right = 508.0
margin_bottom = 112.0
rect_min_size = Vector2( 150, 0 )
align = 1
clip_text = true

[node name="PlayerLocal" type="HBoxContainer" parent="GameUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -112.0
margin_right = 508.0
theme = SubResource( 2 )

[node name="Resources" type="Label" parent="GameUI/PlayerLocal"]
margin_right = 150.0
margin_bottom = 112.0
rect_min_size = Vector2( 150, 0 )
align = 1
clip_text = true

[node name="CenterContainer" type="CenterContainer" parent="GameUI/PlayerLocal"]
margin_left = 154.0
margin_right = 254.0
margin_bottom = 112.0

[node name="TextureRect" type="TextureRect" parent="GameUI/PlayerLocal/CenterContainer"]
margin_top = 6.0
margin_right = 100.0
margin_bottom = 106.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="GameUI/PlayerLocal"]
margin_left = 258.0
margin_right = 508.0
margin_bottom = 112.0
rect_min_size = Vector2( 250, 0 )

[node name="Blindfold" type="ColorRect" parent="."]
visible = false
margin_right = 4182.0
margin_bottom = 2288.0
color = Color( 0, 0, 0, 1 )

[connection signal="actionButton" from="." to="GameUI" method="_on_Game_actionButton"]
[connection signal="pressed" from="GameUI/TextureRect/ActionButton" to="." method="_on_ActionButton_pressed"]
